# FinShield

./: .gitignore  CHANGELOG.md  README.md  TECHNICAL_ANALYSIS.md  docker-compose.yml  package-lock.json
backend/: .env  .env.example  BACKBOARD_LEARNING.md  Dockerfile  FRONTEND_INTEGRATION.md  README.md  check_health.py  debug_multipart.py  debug_output.txt  diagnose_backboard.py  diagnose_output.txt  live_test.py  live_test_8001.py  metrics_response.json  pyproject.toml  queue_response.json  test_backboard.py  test_backboard_v2.py  test_exact_flow.py  test_output.txt  test_output_2.txt  test_output_3.txt  test_raw_response.py  test_real_ai.py  test_real_upload.py  test_service_class.py
backend/app/: __init__.py  main.py  sockets.py
backend/app/api/: __init__.py  admin.py  batch.py  dashboard.py  documents.py  forensics.py  health.py  ingestion.py  knowledge.py  learning.py  reports.py  review.py
backend/app/api/v1/: __init__.py  analyze.py  health.py
backend/app/core/: __init__.py  config.py
backend/app/db/: models.py  session.py
backend/app/services/: __init__.py  audio_analyzer.py  audio_processor.py  backboard_client.py  backboard_learning.py  backboard_service.py  consistency_engine.py  context_engine.py  doc_pipeline.py  document_engine.py  document_intelligence_pipeline.py  document_scanner.py  document_schemas.py  document_validator.py  entity_resolution.py  excel_normalizer.py  file_preprocess.py  knowledge_graph.py  layout.py  learning.py  learning_loop.py  memory_store.py  mock_state.py  quality.py  rag_engine.py  reconciliation.py  storage.py  universal_pipeline.py  validation.py
backend/scripts/: dev.py  ingest_dataset.py  test_socket.py
frontend/: README.md  analyze_final.txt  analyze_out.txt  analyze_output.txt  analyze_results.txt  errors_only.txt  full_analyze.txt  pubspec.yaml
frontend_backup_20260209/: README.md  analysis_clean_check.txt  analysis_errors.txt  analysis_options.yaml
webapp/: index.html  package-lock.json  package.json  (+1 more)
(+79 files in other folders)
